--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
 <body>
   <header class="container-fluid fixed-top">
-    <div class="row">
+    <div id="topnav" class="row bg-white-pt-lg-2 d-none d-lg-flex">
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link mai-logo-link">
           <h2 class="logo-font text-black my-0"><strong>Shavers</strong> Haven</h2>
@@ -86,7 +86,7 @@
           </li>
           <!-- shopping bag link -->
           <li class="list-inline-item">
-            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
               <div class="text-center">
                   <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                   <p class="my-0">
