--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,14 +3,15 @@ html {
 }
 
 body {
-    background: url() no-repeat center center fixed;
+    background: url('/media/shaving-tools-brush-foam-homepage-green-bg.webp') no-repeat center center fixed;
     background-size: cover;
-    /* height:  */
+    height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';
+    font-family: 'Inter', sans-serif;
 }
+    
 
-* from Bulma */
+    * from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -56,6 +57,21 @@ body {
     border: 1px solid black !important;
 }
 
+/* Delivery banner fix: white text on black bg */
+.bg-black {
+    background: #000 !important;
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
@@ -77,5 +93,16 @@ body {
 
     .header-container {
         padding-top: 164px;
+    }
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 146px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
     }
 }
