Added sorting & products count to product page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -72,6 +72,11 @@ body {
 	z-index: -1;
 }
 
+a.category-badge > span.badge:hover {
+    background: #e2b74a !important;
+    color: #201f1f !important;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
