--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,23 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
-        <!-- List all of the products at once -->
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Shaving Products
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
-                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
-            </div>
-        </li>
         <!-- List the lathering category -->
-        <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"
-                id="lathering-products" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Lathering Products
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-dark mr-5" href="#"
+            id="lathering-products" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <u>Lathering Products</u>
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="shaving-products-link">
                 <a href="{% url 'products' %}?category=soaps" class="dropdown-item">Shaving Soaps</a>
@@ -27,24 +14,37 @@
         </li>
         <!-- List the safety razors category -->
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href=""
-                id="safety-razors">
-                Safety Razors
-            </a>
-        </li>
+            <a class="logo-font font-weight-bold nav-link text-dark mr-5" href=""
+            id="safety-razors">
+            <u>Safety Razors</u>
+        </a>
+    </li>
+    <!-- List all of the products at once -->
+    <li class="nav-item dropdown">
+        <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            All Shaving Products
+        </a>
+        <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+            <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price (Lowest)</a>
+            <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating (Highest)</a>
+            <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category (A-Z)</a>
+            <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+        </div>
+    </li>
         <!-- List the razor blades category -->
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href=""
-                id="razor-blades">
-                Razor Blades
-            </a>
-        </li>
-        <!-- List the shaving brushes category -->
-        <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href=""
-                id="shaving-brushes">
-                Shaving Brushes
-            </a>
-        </li>
-    </ul>
+            <a class="logo-font font-weight-bold nav-link text-dark mr-5" href=""
+            id="razor-blades">
+            <u>Razor Blades</u>
+        </a>
+    </li>
+    <!-- List the shaving brushes category -->
+    <li class="nav-item">
+        <a class="logo-font font-weight-bold nav-link text-dark mr-5" href=""
+        id="shaving-brushes">
+        <u>Shaving Brushes</u>
+    </a>
+</li>
+</ul>
 </div>
