--- a/templates/base.html
+++ b/templates/base.html
@@ -125,7 +125,7 @@
     <div id="delivery-banner" class="row text-center">
       <div class="col bg-black text-white">
         <h5 class="logo-font my-1 delivery-banner">
-          Free delivery on orders over €45{{ free_delivery_threshold }}!
+          Free delivery on orders over €{{ free_delivery_threshold }}!
         </h5>
       </div>
     </div>
