--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -49,7 +49,39 @@
                 <small class="text-muted">No Rating</small>
                 {% endif %}
                 <!-- description -->
-                <p class="mt-3">{{ product.description }}</p>
+                <p class="mt-3text-justify"><strong>About this product:</strong><br>{{ product.description }}</p>
+                <!-- This form facilitates adding the product to the shopping bag through a POST request, 
+                    allowing us to pass information to the server -->
+                <form class="form" action="" method="POST">
+                    <!-- important -->
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <!-- Within Column 1, the quantity input allows our users to specify the 
+                            desired quantity of the product they intend to add -->
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- In Column 2, you'll find the form's submit button, a "Keep Shopping" button that redirects users to the products page, and a concealed input field storing the current URL. 
+                            This input ensures that after adding items to the shopping bag,
+                             users are seamlessly redirected back to their initial location. -->
+                        <div class="col-12">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
