--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -9,36 +9,36 @@
         $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
     }
 
-    // Ensure proper enabling/disabling of all input fields when the page loads
-    let allQtyInputs = $('.qty_input');
-    for (let i = 0; i < allQtyInputs.length; i++) {
-        let itemId = $(allQtyInputs[i]).data('item_id');
+   // Ensure proper enabling/disabling of all inputs on page load
+   var allQtyInputs = $('.qty_input');
+    for(var i = 0; i < allQtyInputs.length; i++){
+        var itemId = $(allQtyInputs[i]).data('item_id');
         handleEnableDisable(itemId);
     }
 
-    // Update the enabling/disabling status whenever the input value changes
-    $('.qty_input').change(function () {
-        let itemId = $(this).data('item_id');
+    // Check enable/disable every time the input is changed
+    $('.qty_input').change(function() {
+        var itemId = $(this).data('item_id');
         handleEnableDisable(itemId);
     });
 
-    // Increase quantity when the "+" button is clicked
-    $('.increment-qty').click(function (e) {
-        e.preventDefault();
-        let itemId = $(this).data('item_id');
-        let closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-        let currentValue = parseInt($(closestInput).val());
-        $(closestInput).val(currentValue + 1);
-        handleEnableDisable(itemId);
+    // Increment quantity
+    $('.increment-qty').click(function(e) {
+       e.preventDefault();
+       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+       var currentValue = parseInt($(closestInput).val());
+       $(closestInput).val(currentValue + 1);
+       var itemId = $(this).data('item_id');
+       handleEnableDisable(itemId);
     });
 
-    // Decrease quantity when the "-" button is clicked
-    $('.decrement-qty').click(function (e) {
-        e.preventDefault();
-        let itemId = $(this).data('item_id');
-        let closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-        let currentValue = parseInt($(closestInput).val());
-        $(closestInput).val(currentValue - 1);
-        handleEnableDisable(itemId);
+    // Decrement quantity
+    $('.decrement-qty').click(function(e) {
+       e.preventDefault();
+       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+       var currentValue = parseInt($(closestInput).val());
+       $(closestInput).val(currentValue - 1);
+       var itemId = $(this).data('item_id');
+       handleEnableDisable(itemId);
     });
 </script>
