--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Buy shaving products online, 
+  we sell shaving soaps & creams, safety razors, shaving brushes and razor blades."> 
+  <meta name="keywords" content="shaving, shaving soap, safety razors"> 
   {% endblock %}
 
   {% block extra_meta %}
