--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -48,6 +48,12 @@
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
+                {% if request.user.is_superuser %}
+                    <small class="ml-3">
+                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    </small>
+                    {% endif %}
                 <!-- description -->
                 <p class="mt-3text-justify"><strong>About this product:</strong><br>{{ product.description }}</p>
                 <!-- This form facilitates adding the product to the shopping bag through a POST request, 
