Add SEO meta tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Buy shaving products online, 
   we sell shaving soaps & creams, safety razors, shaving brushes and razor blades."> 
-  <meta name="keywords" content="shaving, shaving soap, safety razors"> 
+  <meta name="keywords" content="Shaving, How to shave
+  , How to shave your face, Double edge razor, Double edged razor blades, Double edged razor, Best double edge razor blades, 
+  Double edge safety razor, Best razor for sensitive skin, Treat razor burn, Prevent razor burn, Get rid of shaving pump, 
+  Help with razor burn, Soothe razor burn"> 
   {% endblock %}
 
   {% block extra_meta %}
