--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
     <div id="topnav" class="row bg-white d-none d-lg-flex">
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <img src="media/site-logo-med.png" alt="Brand-logo for bigger screen" class="img-fluid d-none d-md-block">
+          <img src="https://shavers-haven.s3.eu-west-1.amazonaws.com/media/site-logo-med.png" alt="Brand-logo for bigger screen" class="img-fluid d-none d-md-block">
         </a>
       </div>
       <!-- FORM -->
