--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
         <div class="row flex-wrap-reverse align-items-center">
             <div class="col-12 col-md-6 mb-3 p-3 d-flex flex-column align-items-center justify-content-center text-white text-center hero-text">
                 <p>Welcome! <br> Start your hassle-free, easy,
-                    everyday shaving journey for the ultimate smooth and irritation-free shaving experience now!</p>
+                    everyday shaving journey for the ultimate smooth and irritation-free grooming experience now!</p>
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-light btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                     </h4>
@@ -26,6 +26,13 @@
         </div>
     </div>
 </section>
+<!-- newsletter -->
+{% include 'home/newsletter.html' %}
+{% endblock %}
 
-
+{% block postloadjs %}
+{{ block.super }}
+<!-- mailchimp -->
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+<script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
 {% endblock %}
