--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: #fcf9f8;
+    background: #faf9f6;
     color: #323232;
     font-family: 'Inter', sans-serif;
 }
@@ -94,6 +94,24 @@ body {
 
 .navbar {
     padding: 2px;
+    background-color: #F3EDE0;
+}
+
+#topnav {
+    background-color: #F3EDE0;
+}
+
+/* mailchimp css */
+#mc_embed_signup{
+    background:#F3EDE0;
+    font: 12px 'Inter', sans-serif; 
+    width: 100%;
+    height: 100%;
+    border-radius: .4rem;
+}
+
+footer {
+    background-color: #B29f8e;
 }
 
 /* Delivery banner fix: white text on black bg */
@@ -278,7 +296,7 @@ input[name='q']::placeholder {
     }
 
     .header-container {
-        padding-top: 210px;
+        padding-top: 171px;
     }
 }
 
