--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer  -->
-<footer class="bg-white">
+<footer>
     <div class="container-fluid">
         <div class="container">
             <div class="row py-5">
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 text-center">
                     <p class="font-weight-bold  text-uppercase">Get in touch!</p>
-                    <a href="" target="_blank"
+                    <a href="https://www.facebook.com/p/Shavers-Haven-100009279080351/" target="_blank"
                         rel="noopener nofollow" aria-label="Visit our Facebook page"
                         class=" text-decoration-none"><i class="fab fa-facebook-square"></i>
                           Follow us on Facebook!</a>
