Style newsletter & add stripe user checkout authen

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,23 +4,21 @@
         <div class="container">
             <div class="row py-5">
                 <div class="col-12 text-center">
-                    <a href="{% url 'home' %}" class="text-decoration-none">
-                        <span class="logo-font text-black my-0"><strong class="text-navy">Shavers</strong>Haven</span>
-                    </a>
+                    <h5><span class="logo-font text-black my-0"><strong class="text-navy">Shavers</strong>Haven</span></h5>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 text-center">
-                    <p class="font-weight-bold  text-uppercase">Get in touch!</p>
+                    <p class="font-weight-bold  text-uppercase">Get in touch:</p>
                     <a href="https://www.facebook.com/p/Shavers-Haven-100009279080351/" target="_blank"
                         rel="noopener nofollow" aria-label="Visit our Facebook page"
-                        class=" text-decoration-none"><i class="fab fa-facebook-square"></i>
-                          Follow us on Facebook!</a>
+                        class="text-dark"><i class="fab fa-facebook-square"></i>
+                          Follow us on Facebook</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-md-2 text-center">
-                    <p class="font-weight-bold  text-uppercase mt-4 mt-md-0">Subscribe</p>
-                    <a href="{% url 'home' %}#newsletter" class=" text-decoration-none"><i
-                            class="fa-regular fa-newspaper"></i>Newsletter.</a>
+                    <p class="font-weight-bold  text-uppercase mt-4 mt-md-0">Subscribe:</p>
+                    <a href="{% url 'home' %}#newsletter" class="text-dark">
+                        <i class="fa-regular fa-newspaper fa-shake" style="color: #2f2d2d;"></i>&nbsp; Newsletter</a>
                 </div>
             </div>
             <hr>
@@ -28,7 +26,7 @@
                 <div class="col-12 text-center ">
                     <p><i class=" fa-regular fa-copyright"></i>&nbsp; Ian Garrigan &nbsp;<a
                             href="https://github.com/Ian-Garrigan/shavers-haven/" target="_blank" rel="noopener nofollow"
-                            aria-label="Visit my Github"><i class=" fa-brands fa-github"></i></a></p>
+                            aria-label="Visit my Github"><i class="text-dark fa-brands fa-github"></i></a></p>
                 </div>
             </div>
         </div>
