--- a/home/templates/home/newsletter.html
+++ b/home/templates/home/newsletter.html
@@ -3,7 +3,6 @@
         <div class="row">
             <div class="col-12">
                 <h4 class="text-center"><span class="text-heading">Be the first to hear about our latest products - including our secret master plan to create a traditional shaving revolution!</span></h4>
-                <hr class="mx-auto">
             </div>
         </div>
         <div class="row align-items-center">
@@ -15,22 +14,24 @@
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                         target="_blank">
                         <div id="mc_embed_signup_scroll" class="py-3 font-weight-bold">
-                            <div class="text-center font-weight-bold text-uppercase text-lg">
-                                Subscribe to
+                            <div class="text-center font-weight-bold text-lg">
+                                <span class="h6">Subscribe to</span>
                                 <h2 class="logo-font text-black my-0"><strong class="text-navy">Shavers</strong>Haven</h2>
+                                <span class="h6">newsletter!</span>
                             </div>    
                             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                            <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span
+                            <div class="mc-field-group col-md-8 offset-md-2"><label for="mce-EMAIL">Email Address <span
                                         class="asterisk">*</span></label><input type="email" name="EMAIL"
-                                    class="required email" id="mce-EMAIL" required="" value=""></div>
+                                    class="required email form-control" id="mce-EMAIL" required="" value=""></div>
                             <div id="mce-responses" class="clear">
                                 <div class="response" id="mce-error-response" style="display: none;"></div>
                                 <div class="response" id="mce-success-response" style="display: none;"></div>
                             </div>
                             <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
                                     name="b_f387d79405b05c07f37b67f87_61a6edf174" tabindex="-1" value=""></div>
-                            <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                    class="button" value="Subscribe"></div>
+                            <div class="text-center">
+                                <input type="submit" name="subscribe" class="btn btn-dark mb-3" value="Subscribe">
+                            </div>
                         </div>
                     </form>
                 </div>
