--- a/templates/base.html
+++ b/templates/base.html
@@ -134,8 +134,8 @@
     </div>
     <div id="delivery-banner" class="row text-center">
       <div class="col bg-black text-white">
-        <h5 class="logo-font my-1 delivery-banner">
-          Free delivery on orders over €{{ free_delivery_threshold }}!
+        <h5 class="my-1 delivery-banner">
+          <i class="fa-solid fa-truck fa-flip-horizontal fa-sm" style="color: #ffffff;"></i>&nbsp; Free delivery on orders over €{{ free_delivery_threshold }}!
         </h5>
       </div>
     </div>
