Make product manager & style html

--- a/contact_us/templates/contact_us/success_contact.html
+++ b/contact_us/templates/contact_us/success_contact.html
@@ -14,7 +14,7 @@
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
             <div class="my-5">
-                <h3 class="text-white">Thank you for your message. Please check out our wide range of products.</h3>
+                <h3 class="text-dark">Thank you for contacting us. Please check out our wide range of products..</h3>
                 <h4>
                     <a href="{% url 'products' %}" class="shop-now-button btn btn-light btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                 </h4>
