--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -44,7 +44,7 @@
                             Spend <strong>€{{ free_delivery_delta }}</strong> more to get free next day delivery!
                         </p>
                     {% endif %}
-                    <a href="{% url 'checkout' %}" class="btn btn-info btn-block rounded-right rounded-lg">
+                    <a href="{% url 'checkout' %}" class="btn btn-dark btn-block rounded-right rounded-lg">
                         <span class="text-uppercase">Go To Secure Checkout</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
