--- a/contact_us/templates/contact_us/contact_us.html
+++ b/contact_us/templates/contact_us/contact_us.html
@@ -5,11 +5,9 @@
 {% block extra_title %} | Contact Us{% endblock %}
 
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+{% endblock %}
+
+{% block header_class %}
 {% endblock %}
 
 {% block content %}
@@ -32,7 +30,10 @@
                     <form class="mt-3" action="" method="POST" id="profile-update-form">
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button class="submit-button btn-black rounded-0 text-uppercase float-right">Submit</button>
+                        <button class="submit-button btn-black mb-3 rounded-0 text-uppercase float-right">Submit</button>
                     </form>
                 </div>
+            </div>
+    </div>
+</div>
 {% endblock %}
