--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -2,11 +2,9 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
+{% endblock %}
+
+{% block header_class %}
 {% endblock %}
 
 {% block content %}
@@ -26,7 +24,7 @@
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form | crispy }}
-                    <div class="text-right">
+                    <div class="text-right my-3">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">UPDATE</button>
                     </div>
