--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,18 +2,16 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+{% endblock %}
+
+{% block header_class %}
 {% endblock %}
 
 {% block content %}
 <div class="overlay"></div>
 
 <!-- Main/Core page content -->
-<div class="container-fluid">
+<div class="container-fluid mt-4">
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="logo-font">Products</h2>
@@ -25,9 +23,9 @@
             <hr class="w-50 mb-1">
         </div>
     </div>
-    <div class="row">
+    <div class="row rounded">
         <!-- bootstrap card divided into product image, name and price&rating -->
-        <div class="product-container col-10 offset-1">
+        <div class="product-container col-10 offset-1 mb-4 rounded">
             <div class="row mt-1 mb-2">
                 <!-- A sorting box with various options to filter by -->
                 <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
@@ -54,9 +52,9 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row shadow rounded">
                 {% for product in products %}
-                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 shadow-sm rounded">
                     <!-- product image -->
                     <div class="card h-100 border-0">
                         {% if product.image %}
@@ -107,23 +105,19 @@
                 {% if forloop.counter|divisibleby:1 %}
                 <!--  bootstrap display small none class prevents this column rendering everything except extra small screens -->
                 <div class="col-12 d-sm-none mb-5">
-                    <hr>
                 </div>
                 {% endif %}
                 {% if forloop.counter|divisibleby:2 %}
                 <!-- bootstrap to keep column hidden on extra small screens and display block for small screens & larger  -->
                 <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                    <hr>
                 </div>
                 {% endif %}
                 {% if forloop.counter|divisibleby:3 %}
                 <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                    <hr>
                 </div>
                 {% endif %}
                 {% if forloop.counter|divisibleby:4 %}
                 <div class="col-12 d-none d-xl-block mb-5">
-                    <hr>
                 </div>
                 {% endif %}
                 {% endfor %}
@@ -131,9 +125,9 @@
         </div>
     </div>
 </div>
-<div class="btt-button shadow-sm rounded-0 border border-black">
+<div class="btt-button bg-dark rounded-0 border border-black mb-5">
     <a class="btt-link d-flex h-100">
-        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        <i class="fas fa-arrow-up-long text-white mx-auto my-auto"></i>
     </a>
 </div>
 {% endblock %}
