--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -6,88 +6,86 @@
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
+{% endblock %}
+
+{% block header_class %}
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
-                <hr>
-            </div>
+<div class="container profile-forms my-4">
+    <div class="py-3 text-center">
+        <h2>Manage Profile</h2>
+        <div>
+            <p class="text-center"><small>You are logged in as: <strong>{{ user.username }}</strong></small></p>
         </div>
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <p class="text-muted">Primary Delivery Information</p>
-                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Details</button>
-                </form>
-            </div>
-            <div class="col-12 col-lg-6">
-                <p class="text-muted">Order History</p>
-                <div class="order-history table-responsive">
-                    <table class="table table-sm table-borderless">
-                        <thead>
-                            <tr>
-                            <th scope="col">Date</th>
-                            <th scope="col">Order No.</th>
-                            <th scope="col">Items</th>
-                            <th scope="col">Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for order in orders %}
-                                <tr>
-                                    <td>
-                                        <a href="{% url 'order_history' order.order_number %}"
-                                        title="{{ order.order_number }}">
-                                            {{ order.order_number|truncatechars:6 }}
-                                        </a>
-                                    </td>
-                                    <td>{{ order.date }}</td>
-                                    <td>
-                                        <ul class="list-unstyled">
-                                            {% for item in order.lineitems.all %}
-                                            <li class="small">
-                                                {{ item.product.name }} x{{ item.quantity }}
-                                            </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </td>
-                                    <td>${{ order.grand_total }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+        <hr>
+    </div>
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card shadow">
+                <div class="card-body">
+                    <h5 class="card-title text-center mt-4">Default Delivery Information</h5>
+                    <hr>
+                    <div class="delivery-info">
+                        <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                            {% csrf_token %}
+                            {{ form|crispy }}
+                            <hr>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-dark rounded-3">
+                                    <span class="font-weight-bold">Update Profile</span>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="col-md-8">
+            <div class="card shadow">
+                <div class="card-body">
+                    <h5 class="card-title rounded-0 text-center"><u>Order History</u></h5>
+                    <div>
+                        <table class="table table-striped table-bordered">
+                            <caption>Click order number for more details</caption>
+                            <thead>
+                                <tr>
+                                    <th>Order Number</th>
+                                    <th>Date</th>
+                                    <th>Items</th>
+                                    <th>Grand Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for order in orders %}
+                                    {% for item in order.lineitems.all %}
+                                        <tr>
+                                            <td>
+                                                <a href="{% url 'order_history' order.order_number %}"
+                                                    title="{{ order.order_number }}">
+                                                    {{ order.order_number|truncatechars:6 }}
+                                                </a>
+                                            </td>
+                                            <td>{{ order.order_date }}</td>
+                                            <td>{{ item.product.name }} x {{ item.quantity }}</td>
+                                            <td>{{ order.grand_total }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                {% empty %}
+                                    <tr>
+                                        <td colspan="4" class="text-center">You have no past orders.</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
-{% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript">
-        let countrySelected = $('#id_default_country').val();
-        if(!countrySelected) {
-            $('#id_default_country').css('color', '#aab7c4');
-        };
-        $('#id_default_country').change(function() {
-            countrySelected = $(this).val();
-            if(!countrySelected) {
-            $(this).css('color', '#aab7c4');
-        } else {
-            $(this).css('color', '#000');
-        }
-    });
-    </script>
-{% endblock %}
 
 
