--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
 </head>
 
 <body>
-  <header class="container-fluid fixed-top">
+  <header class="container-fluid {% block header_class %} fixed-top {% endblock %}">
     <div id="topnav" class="row d-none d-lg-flex">
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
