--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -20,6 +20,16 @@
                     <a href="{% url 'home' %}#newsletter" class="text-dark">
                         <i class="fa-regular fa-newspaper fa-shake" style="color: #2f2d2d;"></i>&nbsp; Newsletter</a>
                 </div>
+                <div class="col-12 col-md-6 col-lg-3 mb-md-2 text-center">
+                    <p class="font-weight-bold  text-uppercase mt-4 mt-md-0">About Us:</p>
+                    <a href="{% url 'contact_us' %}" class="text-dark">
+                        <i class="fa-solid fa-face-smile" style="color: #2f2d2d;"></i>&nbsp; Read our story</a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 mb-md-2 text-center">
+                    <p class="font-weight-bold  text-uppercase mt-4 mt-md-0">Contact Us:</p>
+                    <a href="{% url 'contact_us' %}" class="text-dark">
+                        <i class="fa-solid fa-address-book" style="color: #2f2d2d;"></i>&nbsp; Say hello!</a>
+                </div>
             </div>
             <hr>
             <div class="row py-3">
