--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -16,7 +16,7 @@
     <div class="py-3 text-center">
         <h2>Manage Profile</h2>
         <div>
-            <p class="text-center"><small>You are logged in as: <strong>{{ user.username }}</strong></small></p>
+            <p class="text-center"><small>You are logged in as: <strong class="text-info">{{ user.username }}</strong></small></p>
         </div>
         <hr>
     </div>
