--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -12,13 +12,13 @@
                     <p class="font-weight-bold  text-uppercase">Get in touch:</p>
                     <a href="https://www.facebook.com/p/Shavers-Haven-100009279080351/" target="_blank"
                         rel="noopener nofollow" aria-label="Visit our Facebook page"
-                        class="text-dark"><i class="fab fa-facebook-square"></i>
+                        class="text-dark"><iconify-icon icon="devicon:facebook" width="20"></iconify-icon>&nbsp;
                           Follow us on Facebook</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-md-2 text-center">
                     <p class="font-weight-bold  text-uppercase mt-4 mt-md-0">Subscribe:</p>
                     <a href="{% url 'home' %}#newsletter" class="text-dark">
-                        <i class="fa-regular fa-newspaper fa-shake" style="color: #2f2d2d;"></i>&nbsp; Newsletter</a>
+                        <iconify-icon icon="emojione-monotone:newspaper" width="20"></iconify-icon>&nbsp; Newsletter</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-md-2 text-center">
                     <p class="font-weight-bold  text-uppercase mt-4 mt-md-0">About Us:</p>
@@ -28,15 +28,15 @@
                 <div class="col-12 col-md-6 col-lg-3 mb-md-2 text-center">
                     <p class="font-weight-bold  text-uppercase mt-4 mt-md-0">Contact Us:</p>
                     <a href="{% url 'contact_us' %}" class="text-dark">
-                        <i class="fa-solid fa-address-book" style="color: #2f2d2d;"></i>&nbsp; Say hello!</a>
+                        <iconify-icon icon="mdi:human-hello-variant" style="color: black;" width="20"></iconify-icon>&nbsp; Say hello!</a>
                 </div>
             </div>
             <hr>
             <div class="row py-3">
                 <div class="col-12 text-center ">
-                    <p><i class=" fa-regular fa-copyright"></i>&nbsp; Ian Garrigan &nbsp;<a
+                    <p><i class="bi bi-c-circle"></i></i>&nbsp; Ian Garrigan &nbsp;<a
                             href="https://github.com/Ian-Garrigan/shavers-haven/" target="_blank" rel="noopener nofollow"
-                            aria-label="Visit my Github"><i class="text-dark fa-brands fa-github"></i></a></p>
+                            aria-label="Visit my Github"><iconify-icon icon="logos:github-icon" width="20"></iconify-icon></a></p>
                 </div>
             </div>
         </div>
