--- a/contact_us/templates/contact_us/contact_us.html
+++ b/contact_us/templates/contact_us/contact_us.html
@@ -12,28 +12,27 @@
 
 {% block content %}
 <div class="overlay"></div>
-    <div class="container">
+    <div class="container my-4">
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font text-dark mb-4 text-center">Contact Us</h2>
+                <h2 class="logo-font text-navy text-dark mb-4 text-center">Contact Us</h2>
                 <hr>
             </div>
         </div>
-                <p class="friendly-text text-muted">At <strong>Shavers Haven</strong>, we embrace the timeless art of traditional <i>wet shaving</i>. 
-                    Our devoted team is here to guide you on your shaving journey. Whether you're seeking advice on our classic products, 
-                    require assistance with placing an order, or want to share your insights, we're here to listen and help.
-                     Welcome to a world of authentic shaving experiences.</p>
+            <p class="friendly-text text-muted">At <strong>Shavers Haven</strong>, we embrace the timeless art of traditional <i>wet shaving</i>. 
+                Our devoted team is here to guide you on your shaving journey. Whether you're seeking advice on our classic products, 
+                require assistance with placing an order, or want to share your insights, we're here to listen and help.
+                    Welcome to a world of authentic shaving experiences.</p>
+        <div class="row justify-content-center mb-3">
+            <div class="col-12 col-lg-6 text-info">
+                <form class="mt-3" action="" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="submit-button btn-black mb-3 rounded-0 text-uppercase float-right">Submit</button>
+                </form>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-12 col-lg-6 text-info">
-                    <form class="mt-3" action="" method="POST" id="profile-update-form">
-                        {% csrf_token %}
-                        {{ form|crispy }}
-                        <button class="submit-button btn-black mb-3 rounded-0 text-uppercase float-right">Submit</button>
-                    </form>
-                </div>
-            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
