--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -132,5 +132,6 @@
         </div>
         {% endif %}
     </div>
+    <p class="text-center"><a href="{% url 'delete_wishlist' %}" class="btn btn-sm btn-danger ">Delete Wishlist</a></p>
 </div>
 {% endblock %}
