--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-md-2 text-center">
                     <p class="font-weight-bold  text-uppercase mt-4 mt-md-0">About Us:</p>
-                    <a href="{% url 'contact_us' %}" class="text-dark">
+                    <a href="{% url 'about_us' %}" class="text-dark">
                         <i class="fa-solid fa-face-smile" style="color: #2f2d2d;"></i>&nbsp; Read our story</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 mb-md-2 text-center">
