--- a/static/css/base.css
+++ b/static/css/base.css
@@ -107,11 +107,22 @@ body {
     font: 12px 'Inter', sans-serif; 
     width: 100%;
     height: 100%;
-    border-radius: .4rem;
+    border-radius: 4rem;
 }
 
 footer {
     background-color: #B29f8e;
+}
+
+/* delete review card */
+
+.delete-form {
+    border: 2px solid #201e1e;
+    border-radius: 6px;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Delivery banner fix: white text on black bg */
